--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 #root {
-  max-width: 1280px;
+  position: relative;
+  z-index: 2;
+  width: 100%;
   margin: 0 auto;
-  padding: 2rem;
+
   text-align: center;
 }
 
