--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
-@import url('./styles/form.css');
+* {
+  margin: 0;
+  padding: 0;
+}
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -27,11 +30,23 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  /* background-image: url('./assets/images/vecteezy_vector-seamless-pattern-with-cute-animal_8122967.jpg'); */
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   min-width: 320px;
   min-height: 100vh;
 }
-
+body::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  background-color: #0000007e;
+}
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
